--- a/style.css
+++ b/style.css
@@ -113,6 +113,15 @@ body{
     bottom: -4px;
     left: 20px;
 }
+ #mobile{
+    display: none;
+    align-items: center;
+ }
+
+ #close{
+    display: none;
+ }
+ 
 
 /* --------------------------------                    Home                     ----------------------------------- */
 #hero{
@@ -157,6 +166,7 @@ body{
 }
 #feature .fe-box{
     width: 200px;
+    height: 200px;
     text-align: center;
     padding: 20px 10px;
     box-shadow: 20px 20px 34px rgba(0, 0, 0, 0.06);
@@ -180,7 +190,8 @@ body{
 }
 
 #feature .fe-box img{
-    width: 100%;
+    width: 140px;
+    height: 100px;
     margin-bottom: 10px;
 }
 
@@ -343,7 +354,7 @@ body{
 }
 
 #newsletter input{
-    height: 3.125rem;
+    height: 50px;
     padding: 0 1.25em;
     font-size: 14px;
     width: 100%;
@@ -356,11 +367,348 @@ body{
 }
 
 #newsletter button{
+    height: 50px;
+    padding: 0 1.25em;
     background-color:rgb(45, 182, 169) ;
     color: white;
     white-space: nowrap;
     border-top-left-radius:0;
     border-bottom-right-radius:0;
+    border: 1px solid transparent;
+}
+
+/*-----------------------------------------                footer                    -------------------------------------- */
+footer{
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+}
+
+footer .col{
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    margin-bottom: 20px;
+}
+
+footer .logof{
+    font-size: 50px;
+    color: rgb(45, 182, 169) ;
+    margin-bottom: 10px;
+}
+
+footer h4{
+    font-size: 14px;
+    padding-bottom: 20px;
+    padding-left: 10px;
+}
+
+footer p{
+    font-size: 13px;
+    margin: 0 0 8px 0;
+    padding-left: 10px;
+}
+
+footer a{
+    font-size: 13px;
+    text-decoration: none;
+    color: black;
+    margin: 10px;
+}
+
+footer .follow{
+    margin-top: 20px;
+}
+
+footer .follow i{
+    color: #3f7f63;
+    padding-right: 4px;
+    cursor: pointer;
+    padding-left: 8px;
+}
+
+footer .install .row img{
+    border: 1px solid rgb(12, 99, 67);
+    border-radius: 6px;
+    width: 120px;
+    height: 60px;
+}
+
+footer .install img{
+    margin: 10px 0 15px 0;
+    width: 200px;
+    height: 70px;
+}
+
+footer .follow i:hover, 
+footer a:hover{
+    color:rgb(25, 227, 207) ;
+}
+
+/*--------------------------------------------------          media queries          ------------------------------------ */
+@media(max-width:1440px){
+    #banner .banner-box{
+        background-image: url("background\ 1.avif");
+        min-width: 600px;
+        height: 40vh;
+    }
+    #banner .banner-box2{
+        background-image: url("background\ 2.avif");
+    }
+}
+@media(max-width:1024px){
+
+    #hero{    
+        height: 70vh;
+    }
+    
+    #hero button{    
+        padding: 10px 60px 10px 45px;    
+    }
+
+    #feature .fe-box{
+        width: 160px;
+        padding: 10px 10px;
+        margin: 10px 0;
+    }
+    
+    #product1 .pro-container{
+        padding: 20px;
+        display: grid;
+        grid-template-columns: auto auto auto;
+    }
+    
+    
+    #product1 .pro{
+        min-width: 260px;
+    }
+    
+    #product1 .pro:hover{
+        box-shadow: 20px 20px 30px rgba(0, 0, 0, 0.06);
+    }
+    
+    #product1 .pro img{
+        width: 200px;
+    }
+    
+    #banner .banner-box{
+        background-image: url("background\ 1.avif");
+        min-width: 400px;
+        height: 30vh;
+    }
+
+    #banner .banner-box2{
+        background-image: url("background\ 2.avif");
+    }
+
+}
+@media(max-width:768px){
+    #navbar {
+        display: flex;
+        flex-direction: column;
+        align-items: flex-start;
+        justify-content: flex-start;
+        position: fixed;
+        top: 0;
+        right: -300px;
+        height: 100vh;
+        width: 300px;
+        background-color: white;
+        box-shadow: 0 40px 60px rgba(0, 0, 0, 0.01);
+        padding: 80px 0 0 10px;
+        transition: 0.3s;
+    }
+
+    #navbar.active{
+        right: 0px;
+    }
+    #navbar li{
+        margin-bottom: 25px;
+    }
+
+    #mobile{
+        display: flex;
+        align-items: center;
+     }
+
+     #mobile i{
+        /* color: rgb(45, 182, 169) ; */
+        color: black;
+        font-size: 24px;
+        padding-left: 20px;
+     }
+
+     #close{
+        display: initial;
+        position: absolute;
+        top: 30px;
+        left: 30px;
+        color: black;
+        font-size: 24px;
+     }
+
+     #lg-bag{
+        display: none;
+     }
+
+     #hero{
+        height: 70vh;
+        padding: 0 80px;
+        background-position: top 30% right 30%;
+    }
+    
+    #hero h4{
+        padding-bottom: 10px;
+    }
+    
+
+    #feature{
+        display: grid;
+        grid-template-columns: auto auto auto;
+    }
+
+    #product1 .pro-container{
+        padding: 5px;
+        display: grid;
+        grid-template-columns: auto auto auto;
+    }   
+    
+    #product1 .pro{
+        min-width: 200px;
+        margin: 10px;
+    }
+    
+    #product1 .pro img{
+        width: 100px;
+        height: 180px;
+    }
+
+    #banner .banner-box{
+        background-image: url("background\ 1.avif");
+        min-width: 300px;
+        height: 30vh;
+        padding: 10px;
+    }
+    
+    #banner .banner-box2{
+        background-image: url("background\ 2.avif");
+    }
+    
+    #banner h4{
+        font-size: 15px;
+        font-weight: 200;
+    }
+    
+    #banner h2{
+        font-size: 20px;
+        font-weight: 600;
+    }
+    
+    #banner span{
+        font-size: 12px;
+        font-weight: 300;
+        padding-bottom: 10px;
+    }
+
+    #newsletter h4{
+        font-size: 15px;
+        font-weight: 500;
+    }
+    
+    #newsletter p{
+        font-size: 12px;
+        font-weight: 300;
+    }
+    
+    #newsletter .form{
+        width: 40%;
+    }
+    
+    #newsletter input{
+        height: 40px;
+        padding: 0 5px;
+        font-size: 10px;    
+    }
+    
+    #newsletter button{
+        height: 40px;
+        padding: 0 5px;
+    }   
+}
+
+@media(max-width:426px){
+    #logo{
+        font-size: 30px;
+        font-weight: 400;
+    }
+    
+    #header{
+        padding: 10px 30px;
+    }
+    #hero{
+        height: 70vh;
+        padding: 0 20px;
+        background-position: 70%;
+    }
+
+    #hero h4{
+        padding-bottom: 5px;
+    }
+    
+    #hero button{
+        padding: 10px 50px 10px 45px;
+        background-repeat: no-repeat;
+        cursor: pointer;
+        font-weight: 700;
+        font-size: 15px;
+    }
+    h2{
+        font-size: 30px;
+    }
+    h1{
+        font-size: 38px;
+    }
+
+    #feature{
+        display: grid;
+        grid-template-columns: auto auto;
+        padding-left: 50px;
+    }
+
+    #product1 .pro-container{
+        padding: 0px;
+        display: grid;
+        grid-template-columns: auto auto;
+    
+    }   
+    
+    #product1 .pro{
+        min-width: 150px;
+        margin: 5px;
+    }
+    
+    #product1 .pro img{
+        width: 100px;
+        height: 120px;
+    }
+
+    #banner .banner-box{
+        background-image: url("background\ 1.avif");
+        min-width: 300px;
+        height: 30vh;
+        padding: 10px;
+        margin: 5px;
+    }
+    
+    #banner .banner-box2{
+        background-image: url("background\ 2.avif");
+    }
+
+
+    
+
+    
+
 }
 
 
