--- a/style.css
+++ b/style.css
@@ -35,7 +35,7 @@ p{
 }
 
 .section-p1{
-    padding: 40px 80px;
+    padding: 20px 30px;
 }
 
 .section-m1{
@@ -57,7 +57,7 @@ button.white{
 body{
     width: 100%;
 }
-
+/* =============================                      //Home//                    ======================================== */
 /* --------------------                                Header Start               ---------------------------------- */
 #logo{
     font-size: 40px;
@@ -287,7 +287,7 @@ body{
     justify-content: center;
     align-items: flex-start;
     background-image: url("background\ 1.avif");
-    min-width: 650px;
+    min-width: 700px;
     height: 50vh;
     background-size: cover;
     background-position: center;
@@ -449,7 +449,7 @@ footer a:hover{
 @media(max-width:1440px){
     #banner .banner-box{
         background-image: url("background\ 1.avif");
-        min-width: 600px;
+        min-width: 650px;
         height: 40vh;
     }
     #banner .banner-box2{
@@ -493,7 +493,7 @@ footer a:hover{
     
     #banner .banner-box{
         background-image: url("background\ 1.avif");
-        min-width: 400px;
+        min-width: 470px;
         height: 30vh;
     }
 
@@ -585,7 +585,7 @@ footer a:hover{
 
     #banner .banner-box{
         background-image: url("background\ 1.avif");
-        min-width: 300px;
+        min-width: 340px;
         height: 30vh;
         padding: 10px;
     }
@@ -704,16 +704,270 @@ footer a:hover{
         background-image: url("background\ 2.avif");
     }
 
-
+    #newsletter h4{
+        font-size: 20px;
+        font-weight: 700;
+    }
     
-
+    #newsletter p{
+        font-size: 14px;
+        font-weight: 400;
+    }
     
-
+    #newsletter .form{
+        width: 100%;
+    }
+    
+    #newsletter input{
+        height: 30px;
+        padding: 0 5px;
+        font-size: 10px;    
+    }
+    
+    #newsletter button{
+        height: 30px;
+        padding: 0 5px;
+    }   
 }
 
+@media(max-width:320px){
+    #logo{
+        font-size: 25px;
+        font-weight: 300;
+    }
+    
+    #header{
+        padding: 10px 30px;
+    }
+    #hero{
+        height: 60vh;
+        padding: 0 10px;
+        background-position: 70%;
+    }
+
+    #hero h4{
+        padding-bottom: 0px;
+    }
+    
+    #hero button{
+        padding: 5px 30px 5px 25px;
+        background-repeat: no-repeat;
+        cursor: pointer;
+        font-weight: 500;
+        font-size: 10px;
+    }
+    h2{
+        font-size: 10px;
+        padding: 2px;
+    }
+    h1{
+        font-size: 25px;
+        padding: 2px;
+    }
+
+    #feature{
+        display: grid;
+        grid-template-columns: auto;
+        padding-left: 50px;
+    }
+
+    #product1 .pro-container{
+        padding: 0px;
+        display: grid;
+        grid-template-columns: auto;
+    
+    }   
+    
+    #product1 .pro{
+        min-width: 200px;
+        margin: 5px;
+    }
+    
+    #product1 .pro img{
+        width: 90px;
+        height: 100px;
+    }
+
+    #banner .banner-box{
+        background-image: url("background\ 1.avif");
+        min-width: 200px;
+        height: 30vh;
+        padding: 0px 5px;
+        margin: 5px;
+    }
+    
+    #banner .banner-box2{
+        background-image: url("background\ 2.avif");
+    }
+
+    #newsletter h4{
+        font-size: 20px;
+        font-weight: 700;
+    }
+    
+    #newsletter p{
+        font-size: 14px;
+        font-weight: 400;
+    }
+    
+    #newsletter .form{
+        width: 100%;
+    }
+    
+    #newsletter input{
+        height: 30px;
+        padding: 0 5px;
+        font-size: 10px;    
+    }
+    
+    #newsletter button{
+        height: 30px;
+        padding: 0 5px;
+    }   
+}
+
+/* ===============================              //Shop page//        =================================================== */
+ #page-header{
+    background-image: url(shoppage.avif);
+    width: 100%;
+    height: 50vh;
+    background-size: cover;
+    background-repeat: no-repeat;
+    display: flex;
+    justify-content: center;
+    text-align: center;
+    flex-direction: column;
+    padding: 14px;
+ }
+ 
+ #page-header h2,
+ #page-header p{
+    color: white;
+ }
 
 
+ /* =============================                 //Single product //   ================================================= */
+#prodetails{
+    display: flex;
+    margin-top: 20px;
+}
 
+ #prodetails .single-pro-image{
+    width: 40%;
+    margin-right: 50px;
+}
+
+.small-img-group{
+    display: flex;
+    justify-content: space-between;
+}
+
+.small-img-col{
+    flex-basis: 25%;
+    cursor: pointer;
+}
+
+.small-img{
+    width: 120px;
+    height: 180px;
+    border: 1px solid rgb(170, 170, 170);
+    border-radius: 10%;
+    margin: 5px;
+}
+
+#prodetails .single-pro-details{
+    width: 50%;
+    padding-top: 30px;
+}
+
+#prodetails .single-pro-details h4{
+    padding: 40px 0 20px 0;
+}
+
+#prodetails .single-pro-details h2{
+    font-size: 26px;
+}
+
+#prodetails .single-pro-details select{
+    display: block;
+    padding: 5px 10px;
+    margin-bottom: 10px;
+}
+
+#prodetails .single-pro-details input{
+    width: 50px;
+    height: 47px;
+    padding-left: 10px;
+    font-size: 16px;
+    margin-right: 10px;
+}
+
+#prodetails .single-pro-details input:focus{
+    outline: none;
+    
+}
+
+#prodetails .single-pro-details button{
+    background: rgb(45, 182, 169);
+    color: white;
+}
+
+#prodetails .single-pro-details span{
+    line-height: 25px;
+}
+
+/*--------------------------------------------------          media queries          ------------------------------------ */
+@media(max-width:1024px){
+    .small-img{
+        width: 90px;
+        height: 150px;
+    }   
+}
+@media(max-width:768px){
+    .small-img{
+        width: 70px;
+        height: 100px;
+    }  
+    #prodetails .single-pro-image{
+        width: 50%;
+    }
+    #prodetails .single-pro-details{
+        width: 50%;
+        padding-top: 20px;
+    }
+    
+    #prodetails .single-pro-details h4{
+        padding: 20px 0 10px 0;
+    }
+    
+    #prodetails .single-pro-details h2{
+        font-size: 20px;
+    }
+    
+    #prodetails .single-pro-details input{
+        width: 40px;
+        height: 40px;
+        padding-left: 5px;
+    }
+    
+    #prodetails .single-pro-details span{
+        line-height: 20px;
+    }
+    
+}
+@media(max-width:426px)
+{
+    #prodetails{
+        display: flex;
+        flex-direction: column;
+    }   
+}
+@media(max-width:320px){
+    .small-img{
+        width: 50px;
+        height: 80px;
+    }  
+}
 
 
 
