--- a/style.css
+++ b/style.css
@@ -1069,6 +1069,61 @@ footer a:hover{
 
 
 
+/* -----------------------------------                   about page                ------------------------------   */
+#page-header.about-header{
+    background-image: url(about.webp);
+}
 
+#about-head{
+    display: flex;
+    align-items: center;
+}
 
+#about-head img{
+    width: 50%;
+    height: 600px;
+}
 
+#about-head div{
+    padding-left: 40px;
+}
+
+/*--------------------------------------------------          media queries          ------------------------------------ */
+@media(max-width:426px)
+{
+   #about-head{
+    flex-direction: column;
+   }
+   #about-head img{
+    width: 100%;
+    height: auto;
+   }
+   #about-head div{
+    padding-left: 0px;
+   }
+}
+
+/* ----------------------------------------------                contact us        --------------------------------------- */
+#contact-details{
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+
+#contact-details .details{
+    width: 40%;
+}
+
+#contact-details .details span{
+    font-size: 12px;
+}
+
+#contact-details .details h2{
+    font-size: 26px;
+    line-height: 35px;
+}
+
+#contact-details .details h3{
+    font-size: 16px;
+    padding-bottom: 15px;
+}
