--- a/style.css
+++ b/style.css
@@ -57,6 +57,8 @@ button.white{
 body{
     width: 100%;
 }
+
+
 /* =============================                      //Home//                    ======================================== */
 /* --------------------                                Header Start               ---------------------------------- */
 #logo{
@@ -1114,11 +1116,13 @@ footer a:hover{
     width: 40%;
 }
 
-#contact-details .details span{
+#contact-details .details span,
+#form-details form span{
     font-size: 12px;
 }
 
-#contact-details .details h2{
+#contact-details .details h2,
+#form-details form h2{
     font-size: 26px;
     line-height: 35px;
 }
@@ -1127,3 +1131,256 @@ footer a:hover{
     font-size: 16px;
     padding-bottom: 15px;
 }
+
+#contact-details .details li{
+    list-style: none;
+    display: flex;
+    padding: 10px 0;
+}
+
+#contact-details .details li i{
+    font-size: 14px;
+    padding-right: 22px;
+}
+
+#contact-details .details li p{
+    margin: 0;
+    font-size: 14px;
+}
+
+#contact-details .map{
+    width: 55%;
+    height: 450px;
+}
+
+#contact-details .map iframe{
+    width: 100%;
+    height: 100%;
+}
+
+/* ------     contact form     --------- */
+#form-details{
+    display: flex;
+    justify-content: space-between;
+    margin: 30px;
+    padding: 80px;
+    border: 1px solid rgb(198, 194, 194);
+}
+
+#form-details form{
+    width: 65%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+#form-details form input,
+#form-details form textarea{
+    width: 100%;
+    padding: 12px;
+    outline: none;
+    margin-bottom: 20px;
+    border: 1px solid rgb(202, 197, 197);
+}
+
+#form-details form button{
+    background-color: rgb(45, 182, 169);
+    color: white;
+}
+
+#form-details .people div{
+    padding-bottom: 25px;
+    display: flex;
+    align-items: flex-start;
+}
+
+#form-details .people div img{
+    width: 65px;
+    height: 65px;
+    border-radius: 50%;
+    object-fit: cover;
+    margin-right: 15px;
+}
+
+#form-details .people div p{
+    margin: 0;
+    font-size: 13px;
+    line-height: 25px;
+}
+
+#form-details .people div p span{
+    display: block;
+    font-size: 16px;
+    font-weight: 600;
+    color: black;
+}
+
+/*--------------------------------------------------          media queries          ------------------------------------ */
+@media(max-width:768px){    
+    #form-details{
+        padding: 40px;
+    }
+    #form-details form{
+        width: 50%;
+    }
+}
+@media(max-width:426px)
+{
+   #contact-details{
+    flex-direction: column;
+   }
+   #contact-details .details{
+    width: 100%;
+    margin-bottom: 30px;
+   }
+   #contact-details .map{
+    width: 100%;
+   }
+   #form-details{
+    margin: 10px;
+    padding: 30px 10px;
+    flex-wrap: wrap;
+   }
+
+   #form-details form{
+    width: 100%;
+    margin-bottom: 30px;
+   }
+}
+
+
+
+/* -----------------------------------                               cart                             ----------------------------------------- */
+#cart table{
+    width: 100%;
+    border-collapse: collapse;
+    table-layout: fixed;
+    white-space: nowrap;
+}
+
+#cart table img{
+    width: 70px;
+}
+
+#cart table td:nth-child(1){
+    width: 100px;
+    text-align: center;
+}
+
+#cart table td:nth-child(2){
+    width: 150px;
+    text-align: center;
+}
+
+#cart table td:nth-child(3){
+    width: 250px;
+    text-align: center;
+}
+
+#cart table td:nth-child(4),
+#cart table td:nth-child(5),
+#cart table td:nth-child(6){
+    width: 150px;
+    text-align: center;
+}
+
+#cart table td:nth-child(5) input{
+    width: 70px;
+    padding: 10px 5px 10px 15px;
+}
+
+#cart table thead{
+    border: 1px solid rgb(220, 217, 217);
+    border-left: none;
+    border-right: none;
+}
+
+#cart table thead td{
+    font-weight: 700;
+    text-transform: uppercase;
+    font-size: 13px;
+    padding: 18px 0;
+}
+
+#cart table thead  tr td{
+    padding: 15px;
+}
+
+#cart table tbody td{
+    font-size: 13px;
+}
+
+#cart-add{
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+}
+
+#coupan{
+    width: 50%;
+    margin-bottom: 30px;
+}
+
+#coupan h3,
+#subtotal h3{
+    padding-bottom: 15px;
+}
+
+#coupan input{
+    padding: 10px 20px;
+    outline: none;
+    width: 60%;
+    margin-right: 10px;
+    border: 1px solid black;
+}
+
+#coupan button,
+#subtotal button{
+    background-color: rgb(45, 182, 169);
+    color: white;
+    padding: 12px 20px;
+}
+
+#subtotal{
+    width: 50%;
+    margin-bottom: 30px;
+    border: 1px solid black;
+    padding: 30px;
+}
+
+#subtotal table{
+    border-collapse: collapse;
+    width: 100%;
+    margin-bottom: 20px;
+}
+
+#subtotal table td{
+    width: 50%;
+    border: 1px solid rgb(220, 215, 215);
+    padding: 10px;
+    font-size: 13px;
+}
+
+/*--------------------------------------------------          media queries          ------------------------------------ */
+@media(max-width:768px){    
+    #cart{
+        overflow-x: auto;
+    }
+
+}
+@media(max-width:426px)
+{
+   #cart-add{
+    flex-direction: column;
+   }
+   #coupan{
+    width: 100%;
+   }
+   #subtotal{
+    width: 100%;
+    padding: 20px;
+   }
+}
+
+
+
